Assertion failure end < m_runCount in WebCore::BidiRunList<WebCore::BidiRun>::reverseRuns https://bugs.webkit.org/show_bug.cgi?id=123863

Reviewed by Andreas Kling.

Source/WebCore:

Merge https://chromium.googlesource.com/chromium/blink/+/cbaa92c763a37d89eeabd01658e522219299290c

Test: fast/text/bidi-reverse-runs-crash.html

* platform/text/BidiResolver.h:
(WebCore::BidiResolver<Iterator, Run>::createBidiRunsForLine): Don't reverse the runs if there's
nothing to be reversed.

LayoutTests:

* fast/text/bidi-reverse-runs-crash-expected.txt: Added.
* fast/text/bidi-reverse-runs-crash.html: Added.


Canonical link: https://commits.webkit.org/142056@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@158729 268f45cc-cd09-0410-ab3c-d52691b4dbfc